Add comments for corePoolSize and queueCapacity to CachedThreadPoolSample